--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-form": "^1.1.2",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
